--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,7 +13,7 @@ body {
 .container {
 	// padding: 0 100px;
 	width: 100%;
-	height: calc(100vh - 6rem);
+	// height: calc(100vh - 6rem);
 }
 
 @media (min-width: 701px) and (max-width: 1120px) {
