--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,10 +11,10 @@ body {
 }
 
 .container {
-	padding: 6rem 0 0 0;
+	padding: 4rem 0 0 0;
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	// position: absolute;
 	top: 0;
 }
 
