layout and flow update

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -171,7 +171,7 @@ body {
 
 .divider-accent {
 	margin: 0rem 0;
-	background: var(--blue-700) !important;
+	background: var(--primary-700) !important;
 	height: 3px;
 	width: 100%;
 }
