--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -1,7 +1,7 @@
 .logo {
-	font-weight: bolder;
+	font-weight: bold;
 	text-decoration: unset;
-	color: var(--primary-dark-color);
+	color: white;
 
 	font-size: 25px;
 	letter-spacing: 5px;
@@ -25,7 +25,7 @@
 	a {
 		// font-variant: small-caps;
 		text-decoration: unset;
-		color: black;
+		color: white;
 		p {
 			padding: 0 20px;
 		}
