--- a/src/styles/theme/custom/theme.css
+++ b/src/styles/theme/custom/theme.css
@@ -7,10 +7,10 @@
   --surface-e:#ffffff;
   --surface-f:#ffffff;
   --text-color:rgba(0, 0, 0, 0.87);
-  --text-color-secondary:var(--blue-700);
-  --primary-color:var(--blue-400);
+  --text-color-secondary:var(--teal-700);
+  --primary-color:var(--green-400);
   --primary-color-text:#ffffff;
-  --primary-dark-color:var(--blue-700);
+  --primary-dark-color:var(--teal-700);
   --font-family:Montserrat, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
   --surface-0: #ffffff;
   --surface-50: #FAFAFA;
@@ -256,16 +256,16 @@
   --red-700:#ab2f26;
   --red-800:#86251e;
   --red-900:#621b16;
-  --primary-50:var(--blue-50);
-  --primary-100:var(--blue-100);
-  --primary-200:var(--blue-200);
-  --primary-300:var(--blue-30);
-  --primary-400:var(--blue-400);
-  --primary-500:var(--blue-500);
-  --primary-600:var(--blue-600);
-  --primary-700:var(--blue-700);
-  --primary-800:var(--blue-800);
-  --primary-900:var(--blue-900);
+  --primary-50:var(--green-50);
+  --primary-100:var(--green-100);
+  --primary-200:var(--green-200);
+  --primary-300:var(--green-30);
+  --primary-400:var(--green-400);
+  --primary-500:var(--green-500);
+  --primary-600:var(--green-600);
+  --primary-700:var(--green-700);
+  --primary-800:var(--green-800);
+  --primary-900:var(--green-900);
 }
 
 .p-autocomplete .p-autocomplete-loader {
