--- a/src/components/workflow/Workflow.module.scss
+++ b/src/components/workflow/Workflow.module.scss
@@ -6,14 +6,14 @@
 }
 
 
-.guidesContainer {
+.workflowsContainer {
   height: 50rem;
   display: flex;
   justify-content: center;
 }
 
 
-.guidesSelection {
+.workflowsSelection {
   border: solid 1px #E0E0E0;
   margin: 1rem 0;
   padding: 2rem;
