added dynamic routing and bread crumb

--- a/src/styles/theme/custom/theme.css
+++ b/src/styles/theme/custom/theme.css
@@ -1815,12 +1815,12 @@
   border-radius: 4px;
 }
 .p-button:enabled:hover, .p-button:not(button):not(a):not(.p-disabled):hover {
-  background: rgba(63, 81, 181, 0.92);
+  background: rgba(2,57,50, 0.92);
   color: #ffffff;
   border-color: transparent;
 }
 .p-button:enabled:active, .p-button:not(button):not(a):not(.p-disabled):active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
   color: #ffffff;
   border-color: transparent;
 }
@@ -3179,12 +3179,12 @@
   align-items: center;
 }
 .fc.fc-unthemed .fc-toolbar .fc-button:enabled:hover {
-  background: rgba(63, 81, 181, 0.92);
+  background: rgba(2,57,50, 0.92);
   color: #ffffff;
   border-color: transparent;
 }
 .fc.fc-unthemed .fc-toolbar .fc-button:enabled:active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
   color: #ffffff;
   border-color: transparent;
 }
@@ -3341,12 +3341,12 @@
   border-radius: 4px;
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button:enabled:hover {
-  background: rgba(63, 81, 181, 0.92);
+  background: rgba(2,57,50, 0.92);
   color: #ffffff;
   border-color: transparent;
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button:enabled:active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
   color: #ffffff;
   border-color: transparent;
 }
@@ -4459,7 +4459,7 @@
   right: -1rem;
 }
 .p-overlaypanel .p-overlaypanel-close:enabled:hover {
-  background: rgba(63, 81, 181, 0.92);
+  background: rgba(2,57,50, 0.92);
   color: #ffffff;
 }
 .p-overlaypanel:after {
@@ -6390,10 +6390,10 @@
   min-width: auto;
 }
 .p-button:enabled:focus, .p-button:not(button):not(a):not(.p-disabled):focus {
-  background: rgba(63, 81, 181, 0.76);
+  background: rgba(2,57,50, 0.76);
 }
 .p-button:enabled:active, .p-button:not(button):not(a):not(.p-disabled):active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
 }
 .p-button .p-ink {
   background-color: rgba(255, 255, 255, 0.32);
@@ -6966,16 +6966,16 @@
   /* FullCalendar 5 */
 }
 .fc.fc-unthemed .fc-toolbar .fc-button:focus {
-  background: rgba(63, 81, 181, 0.76);
+  background: rgba(2,57,50, 0.76);
 }
 .fc.fc-unthemed .fc-toolbar .fc-button:active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
 }
 .fc.fc-unthemed .fc-toolbar .fc-button-group .fc-button:focus {
-  background: rgba(63, 81, 181, 0.76);
+  background: rgba(2,57,50, 0.76);
 }
 .fc.fc-unthemed .fc-toolbar .fc-button-group .fc-button:active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
 }
 .fc.fc-unthemed .fc-toolbar .fc-button-group .fc-button.fc-dayGridMonth-button:focus, .fc.fc-unthemed .fc-toolbar .fc-button-group .fc-button.fc-timeGridWeek-button:focus, .fc.fc-unthemed .fc-toolbar .fc-button-group .fc-button.fc-timeGridDay-button:focus {
   background: #e0e0e1;
@@ -6986,16 +6986,16 @@
   border-color: #d9d8d9;
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button:focus {
-  background: rgba(63, 81, 181, 0.76);
+  background: rgba(2,57,50, 0.76);
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button:active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button:focus {
-  background: rgba(63, 81, 181, 0.76);
+  background: rgba(2,57,50, 0.76);
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button:active {
-  background: rgba(63, 81, 181, 0.68);
+  background: rgba(2,57,50, 0.68);
 }
 .fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button.fc-dayGridMonth-button:focus, .fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button.fc-timeGridWeek-button:focus, .fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button.fc-timeGridDay-button:focus {
   background: #e0e0e1;
