--- a/src/components/workflow/Workflow.module.scss
+++ b/src/components/workflow/Workflow.module.scss
@@ -1,21 +1,15 @@
+
 .container {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: white;
+  padding: 3.5rem 0;
+  min-height: 50rem;
+
 }
 
 
-.workflowsContainer {
-  height: 50rem;
-  display: flex;
-  justify-content: center;
-}
 
-
-.workflowsSelection {
+.selectionItem {
   border: solid 1px #E0E0E0;
-  margin: 1rem 0;
+  margin:  0.5rem 0 0.5rem 0;
   padding: 2rem;
   border-radius: 0.5rem;
   font-weight: bold;
@@ -24,7 +18,4 @@
     cursor: pointer;
     border-width: 2px;
   }
-  
-
 }
-
