feat/calc: Calculator Update

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -216,6 +216,7 @@
     position: absolute;
     border: 2px solid var(--primary-color);
     right: 40px;
+    bottom: -20px;
   }
 
   &-image-sub-container {
