--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import '~video-react/styles/scss/video-react';
 @import "@/styles/variables.scss";
 
@@ -7,8 +6,8 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: var(--font-family);
-	background-color: var(--surface-100);
+	font-family: mundial, sans-serif;
+	background-color: var(--surface-0);
 	color: $ps-green-dark;
 }
 
