--- a/src/styles/theme/custom/theme.css
+++ b/src/styles/theme/custom/theme.css
@@ -11,7 +11,7 @@
   --primary-color: var(--green-light);
   --primary-color-text:#ffffff;
   --primary-dark-color:var(--green-dark);
-  --font-family:Montserrat, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+  --font-family: mundial, sans-serif;
   --surface-0: #ffffff;
   --surface-50: #FAFAFA;
   --surface-100: #F5F5F5;
@@ -49,30 +49,6 @@
   color-scheme: light;
 }
 
-/* roboto-regular - latin-ext_latin */
-/* @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Roboto"), local("Roboto-Regular"), url("./fonts/roboto-v20-latin-ext_latin-regular.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-regular.woff") format("woff");  */
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-/* } */
-/* roboto-500 - latin-ext_latin */
-/* @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  src: local("Roboto Medium"), local("Roboto-Medium"), url("./fonts/roboto-v20-latin-ext_latin-500.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-500.woff") format("woff");  */
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-/* } */
-/* roboto-700 - latin-ext_latin */
-/* @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Roboto Bold"), local("Roboto-Bold"), url("./fonts/roboto-v20-latin-ext_latin-700.woff2") format("woff2"), url("./fonts/roboto-v20-latin-ext_latin-700.woff") format("woff");  */
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-/* } */
 * {
   box-sizing: border-box;
 }
