--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -9,7 +9,7 @@ body {
 	font-family: mundial, sans-serif;
 	background-color: var(--surface-0);
 	color: $ps-green-dark;
-	overflow-x: hidden;
+	// overflow-x: hidden;
 }
 
 .container {
