--- a/src/components/login/Login.module.scss
+++ b/src/components/login/Login.module.scss
@@ -1,7 +1,8 @@
 .background {
 	position: absolute;
+	z-index: 0;
 	top: 0;
-	height: 100vh;
 	width: 100%;
+	height: 90%;
 	background-image: linear-gradient(to right,#02393230 , white);
   }
