--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -211,6 +211,11 @@
     font-size: 48px;
   }
 
+  &-description {
+    color: white;
+    font-weight: lighter;
+  }
+
   &-image-container {
     position: absolute;
     border: 2px solid var(--primary-color);
@@ -249,6 +254,19 @@
       line-height: 32px;
       font-weight: 200;
     }
+  }
+
+  &-image-container {
+    position: relative;
+    border: 2px solid var(--primary-color);
+  }
+
+  &-image-sub-container {
+    position: relative;
+    top: -16px;
+    left: 20px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -294,6 +312,12 @@
 
   &-contact-us {
     color: var(--primary-dark-color) !important;
+  }
+}
+
+.landing-workflow {
+  & img {
+    max-width: 100% !important;
   }
 }
 
