--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,7 +3,9 @@
 
 html,
 body {
-	height: 100%;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 	margin: 0;
 	padding: 0;
 	font-family: mundial, sans-serif;
