Updated contact us page

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -11,7 +11,7 @@
   --primary-color: #83B899;
   --primary-color-text:#ffffff;
   --secondary-color: #023932;
-  --secondary-color-text:#ffffff;
+  --secondary-color-text:var(--green-dark);
   --primary-dark-color:var(--green-dark);
   --font-family: mundial, sans-serif;
   --surface-0: #ffffff;
