--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -40,10 +40,12 @@
 }
 
 .grid {
-  display: grid;
+  margin: 0;
+  padding: 0;
+  // display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+  // width: var(--max-width);
+  // max-width: 100%;
 }
 
 .card {
