--- a/src/components/calculator/AllOnX/TeethSelector/TeethSelector.module.scss
+++ b/src/components/calculator/AllOnX/TeethSelector/TeethSelector.module.scss
@@ -1,35 +1,47 @@
-.containerFlex {
-  path {
+.teethSelector {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  text {
     transform: scale(1.3);
   }
 
-  display: flex;
-  overflow: hidden;
-  justify-content: center;
-  align-items: center;
-}
+  .containerFlex {
+    path {
+      transform: scale(1.3);
+    }
 
-.columnFlex {
-  display: flex;
-  align-items: center;
-  vertical-align: middle;
-  justify-content: center;
-  width: 400px;
-  height: 300px;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+  }
 
-  &.bottomTeeth {
-    position: relative;
+  .columnFlex {
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+    justify-content: center;
+    width: 400px;
+    height: 300px;
+
+    &.bottomTeeth {
+      position: relative;
+
+      svg {
+        g {
+          transform: translate(0, -216px);
+        }
+      }
+    }
 
     svg {
       g {
-        transform: translate(0, -216px);
+        cursor: pointer;
       }
     }
   }
 
-  svg {
-    g {
-      cursor: pointer;
-    }
-  }
 }
