--- a/src/components/calculator/AllOnX/TeethSelector/TeethSelector.module.scss
+++ b/src/components/calculator/AllOnX/TeethSelector/TeethSelector.module.scss
@@ -17,6 +17,10 @@
     overflow: hidden;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: 600px) {
+      flex-direction: column;
+    }  
   }
 
   .columnFlex {
