--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import '@/styles/fonts/mundial.scss';
 
 :root {
   --surface-a:#ffffff;
@@ -16,7 +17,7 @@
   --secondary-color-rgb: 2, 57, 50;
   --secondary-color-text:var(--green-dark);
   --primary-dark-color:var(--green-dark);
-  --font-family: mundial, sans-serif;
+  --font-family: 'Mundial', sans-serif;
   --surface-0: #ffffff;
   --surface-50: #FAFAFA;
   --surface-100: #F5F5F5;
@@ -40,7 +41,7 @@
   --gray-900: #212121;
   --content-padding:1rem;
   --inline-spacing:0.5rem;
-  --border-radius:4px;
+  --border-radius:5px;
   --surface-ground:#fafafa;
   --surface-section:#ffffff;
   --surface-card:#ffffff;
