--- a/src/components/public/contact/Contact.module.scss
+++ b/src/components/public/contact/Contact.module.scss
@@ -1,9 +1,12 @@
 .section-container {
+   display: flex;
+   justify-content: center;
 	margin: 2rem 0;
 }
 
 @media screen and (min-width: 768px) {
 	.section-container {
+     
 		margin: 6rem 0;
 	}
     
