--- a/src/components/public/home/Home.module.scss
+++ b/src/components/public/home/Home.module.scss
@@ -1,14 +1,32 @@
 .section-container {
-	margin: 2rem 0;
+	// padding: 0 5px ;
 }
 
-@media screen and (min-width: 768px) {
-	.section-container {
-		margin: 8rem 0;
-	}
+// @media screen and (min-width: 768px) {
+// 	.section-container {
+// 		// margin: 8rem 0;
+// 	}
     
-}
+// }
 
 .help-section-container {
 	background-color: rgba(var(--primary-color-rgb), 0.1);
 }
+
+
+.background-radial-gradient {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(circle, #7ec09980 0%, rgba(131, 184, 153, 0) 65%);
+}
+
+.inner {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	border: 4px solid var(--primary-color);
+	top: 10px;
+	left: 25px;
+	z-index: 0;
+  }
