--- a/src/components/public/shared/CTASection/CTASection.module.scss
+++ b/src/components/public/shared/CTASection/CTASection.module.scss
@@ -1,7 +1,25 @@
 .cta-container {
     display: flex;
     justify-content: center;
-    background: var(--secondary-color);
-    color: var(--primary-color);
+    margin: 0 ;
+    padding: 2rem 0;
+    width: 100%;
+    background: rgba(var(--secondary-color-rgb),1);
+    color: white;
+    z-index: 2000;
+    background-image: url('/images/common/elephant.svg');
+    background-size: 45%;
+    background-repeat: no-repeat;
+ 
+    background-position: bottom right;
+    line-height: 1.25;
 
+}
+
+@media screen and (min-width: 768px) {
+    .cta-container {
+        padding: 5rem;
+        background-position: right;
+    }
+    
 }
