--- a/src/components/public/shared/HeroSection/HeroSection.module.scss
+++ b/src/components/public/shared/HeroSection/HeroSection.module.scss
@@ -1,35 +1,62 @@
-
 .hero-container {
-    box-sizing: border-box;
-    height: 600px;
-    background-color: var(--secondary-color);
-    display: flex;
-    justify-content: center;
-    background: radial-gradient(circle, #31574D, #023932 300px);
+	padding-top: 5rem;
+	box-sizing: border-box;
+	
+	height: 100%;
+	background-color: var(--secondary-color);
+	display: flex;
+	justify-content: center;
+	background: radial-gradient(circle, #31574d, #023932 300px);
+	z-index: 1;
+}
+
+@media screen and (min-width: 768px) {
+	.hero-container {
+		height: 750px;
+	}
+}
+
+
+.radial-gradient-2 {
+	display: none;
+	position: absolute;
+	top: -600px;
+	left: -50vw;
+	width: 100vw;
+	height: 1200px;
+	background: radial-gradient(circle, #a6c7b425 0%, rgba(131, 184, 153, 0) 45%);
+}
+
+@media screen and (min-width: 768px) {
+
+	.radial-gradient-2 {
+		display: flex;
+	}
+	
 }
 
 .hero-wrapper {
-    width: 100%;
-    height: 100%;
-    // padding: 0 10px;
-    line-height: 1.5;
+	width: 100%;
+	height: 100%;
+	// padding: 0 10px;
+	line-height: 1.25;
 }
 
-
 .hero-image-container {
-    position: absolute;
-    top: 225px;
-    right: 50px;
-    width: 40%;
-    height: 100%;
-    max-height: 450px;
+	display: flex;
+	justify-content: flex-end;
+	// position: absolute;
+	// top: 225px;
+	// right: 50px;
+	// width: 100%;
+	// height: 100%;
+	// max-height: 450px;
 }
 
 .social-button:not(:last-child) {
-    color: white;
-    padding: 1rem;
-    &:hover {
-        color: var(--primary-color);
-    }
-
+	color: white;
+	padding: 1rem;
+	&:hover {
+		color: var(--primary-color);
+	}
 }
