--- a/src/styles/public.scss
+++ b/src/styles/public.scss
@@ -11,7 +11,7 @@
 @media screen and (min-width: 768px) {
 		.public-content-wrapper {
 			margin: 0 auto;
-			max-width: 1200px;
+			max-width: 1500px;
 			padding: 0 !important;
     }
 }
@@ -22,16 +22,30 @@
 // EFFECTS
 
 .public-blur-shadow {
-	border-radius: 30%;
-	background: #F1FCF5;
-	box-shadow: 0 0 10px #F1FCF5, 0 0 20px #F1FCF5, 0 0 30px #F1FCF5;
-}
+    position: absolute;
+    top: -100px; 
+    left: -100px;
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(circle, #7ec09925 0%, rgba(131, 184, 153, 0) 65%);
 
+}
+.public-blur-shadow-dark {
+    position: absolute;
+    top: -100px; 
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(circle, #a6c7b435 0%, rgba(131, 184, 153, 0) 70%);
+	transform: translateX(-50%);
+
+}
 // TYPOGRAPHY
-$public-section-text: 'text-lg text-left md:text-center line-height-3';
+$public-section-text: 'text-lg text-left md:text-center line-height-3 text-gray-600';
 
 .public-section-title {
-	@include styleclass('text-4xl md:text-6xl font-bold');
+	
+	@include styleclass('text-4xl md:text-6xl font-bold text-gray-800');
 }
 
 .public-section-content {
@@ -44,6 +58,10 @@ $public-section-text: 'text-lg text-left md:text-center line-height-3';
 	}
 
 	
+}
+
+.public-section-label {
+	@include styleclass('text-lg md:text-xl text-gray-800 font-semibold mb-4');
 }
 
 
