--- a/src/app/calculators/page.module.scss
+++ b/src/app/calculators/page.module.scss
@@ -37,3 +37,8 @@
     border: 1px solid var(--secondary-color) !important;
   }
 }
+
+.calculatorButtonSection {
+  max-height: 500px;
+  overflow-y: auto;
+}
