--- a/src/components/public/faq/FAQ.module.scss
+++ b/src/components/public/faq/FAQ.module.scss
@@ -1,15 +1,28 @@
 .section-header {
 	padding: 4rem;
-	background-color: rgba(var(--primary-color-rgb), 0.1);
+	position: relative;
+	background-color: #f3f8f5  ;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
+	z-index: 0;
 }
 @media screen and (max-width: 768px) {
 	.section-header {
 		padding: 2rem;
 	}
 	
+}
+
+
+.background-radial-gradient {
+    position: absolute;
+    width: 1000px;
+    height: 1000px;
+	// bottom : -500px;
+	// left: -100px;
+    background: radial-gradient(circle, #7ec09960 0%, rgba(131, 184, 153, 0) 65%);
+
 }
