--- a/src/components/auth/register/Register.module.scss
+++ b/src/components/auth/register/Register.module.scss
@@ -1,72 +1,60 @@
 .container {
-	padding: 4rem 7rem 0  5rem; 
+	padding: 4rem 2rem;
+	height: 100%;
+}
+@media screen and (min-width: 768px) {
+	.container {
+		padding: 2rem 2rem;
+	}
 }
 
+@media screen and (min-width: 1024px) {
+	.container {
+		padding: 4rem 7rem 0 4rem;
+	}
+}
 
 .radial-gradient {
 	position: absolute;
 	top: 0;
-	width: 800px;
-	height: 800px;
+	width: 100%;
+	height: 100%;
 	background: radial-gradient(circle, #a6c7b425 0%, rgba(131, 184, 153, 0) 75%);
 	left: 0;
 	// transform: translateX(-50%);
 	// transform: translateY(-50%);
 }
 
-.title {
-	position: relative;
-	margin-bottom: 2rem;
-	// &::after  {
-	// 	content: '';
-	// 	position: absolute;
-	// 	right: 50%;
-	// 	// top: 10%;
-	// 	bottom: -25%;
-	// 	height: 5px;
-	// 	width: 10%;
-    //     background-color: rgba(var(--primary-color-rgb), 1);
-	// 	transform: translateX(50%);
-
-
-	// 	}
-
-}
-
-
-.form-container {
-	border: 1px solid var(--gray-300);
-	border-radius: 15px;
-	// justify-content: end;
-	align-items: center;
-	position: relative;
-	// margin: 10rem 10rem 10rem 10rem ;
-	background-color: white;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	@media screen and (min-width: 768px) {
-		// padding: 5rem  12rem 1rem 12rem ;
-	}
-}
-
-
-
-  .formComponent {
+.formComponent {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	transition: transform 0.5s ease-in-out;
-  }
-  
-  .slideLeft {
+	// margin: 4rem 4rem ;
+padding: 2rem 1rem;
+}
+@media screen and (min-width: 768px) {
+	.formComponent {
+		// padding: 2rem 2rem;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	.formComponent {
+		padding: 3rem 8rem 0  8rem  ;
+	}
+	
+}
+
+
+.slideLeft {
 	transform: translateX(-100%);
-  }
-  
-  .slideRight {
+}
+
+.slideRight {
 	transform: translateX(100%);
-  }
-  
-  .current {
+}
+
+.current {
 	transform: translateX(0);
-  }
+}
