worked on pdf changes

--- a/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
+++ b/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
@@ -2,11 +2,13 @@
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 10px;
+  
 
   th, td {
     border: 1px solid #000;
     padding: 8px;
     text-align: center;
+    font-size: 12px;
   }
 
   th {
