--- a/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
+++ b/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
@@ -1,27 +1,27 @@
 .striped-table {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 10px;
-  
+  border-spacing: 0;
+  margin-bottom: 10px; 
 
   th, td {
-    border: 1px solid #000;
+    border: 1px solid var(--surface-800);
     padding: 8px;
     text-align: center;
     font-size: 12px;
   }
 
   th {
-    background-color: #023932;
-    color: #ddd;
+    background-color: var(--secondary-color);
+    color: var(--surface-0);
   }
   tr {
     &.even {
-      background-color: #f9f9f9;
+      background-color: var(--gray-50);
     }
 
     &.odd {
-      background-color: #c3dfd0;
+      background-color: var(--primary-color);
     }
   }
 }
