--- a/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
+++ b/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
@@ -5,10 +5,14 @@
   margin-bottom: 10px; 
 
   th, td {
-    border: 1px solid var(--surface-800);
     padding: 8px;
     text-align: center;
     font-size: 12px;
+    border-right: 1px solid var(--surface-800);
+    border-bottom: 1px solid var(--surface-800);
+    &:first-child {
+      border-left: 1px solid var(--surface-800);
+    }
   }
 
   th {
