--- a/src/components/secure/calculator/AllOnX/PdfExport/PdfContent/PdfContent.module.scss
+++ b/src/components/secure/calculator/AllOnX/PdfExport/PdfContent/PdfContent.module.scss
@@ -1,3 +1,7 @@
 .bg-color {
   background-color: var(--secondary-color);
 }
+.separator {
+  border-color: var(--secondary-color);
+  border-bottom: 1px solid;
+}
