--- a/src/components/public/shared/HeroSection/HeroSection.module.scss
+++ b/src/components/public/shared/HeroSection/HeroSection.module.scss
@@ -1,7 +1,6 @@
 .hero-container {
-	padding-top: 5rem;
+	padding: 5rem 0;
 	box-sizing: border-box;
-	
 	height: 100%;
 	background-color: var(--secondary-color);
 	display: flex;
@@ -10,15 +9,7 @@
 	z-index: 1;
 }
 
-@media screen and (min-width: 768px) {
-	.hero-container {
-		height: 750px;
-	}
-}
-
-
 .radial-gradient-2 {
-	display: none;
 	position: absolute;
 	top: -600px;
 	left: -50vw;
@@ -27,30 +18,15 @@
 	background: radial-gradient(circle, #a6c7b425 0%, rgba(131, 184, 153, 0) 45%);
 }
 
-@media screen and (min-width: 768px) {
-
-	.radial-gradient-2 {
-		display: flex;
-	}
-	
-}
-
 .hero-wrapper {
 	width: 100%;
 	height: 100%;
-	// padding: 0 10px;
 	line-height: 1.25;
 }
 
 .hero-image-container {
 	display: flex;
 	justify-content: flex-end;
-	// position: absolute;
-	// top: 225px;
-	// right: 50px;
-	// width: 100%;
-	// height: 100%;
-	// max-height: 450px;
 }
 
 .social-button:not(:last-child) {
