Fixed css issues

--- a/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
+++ b/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/InputSummary.module.scss
@@ -18,7 +18,7 @@
   th {
     background-color: var(--secondary-color);
     color: var(--surface-0);
-    word-break: break-all;
+    word-wrap: normal;
   }
   tr {
     &.even {
