--- a/src/components/layout/navigation/navbar/styles.module.scss
+++ b/src/components/layout/navigation/navbar/styles.module.scss
@@ -1,127 +1,117 @@
 .navbarNav {
-	align-items: center;
-	list-style: none;
-	font-size: 18px;
-	font-weight: bold;
+  align-items: center;
+  list-style: none;
+  font-size: 18px;
+  font-weight: bold;
 
-	a {
-		// font-variant: small-caps;
-		text-decoration: unset;
-		color: white;
-		p {
-			padding: 0 20px;
-		}
-	}
-	a:hover {
-		p {
-			color: var(--primary-color);
-		}
-	}
-
-	& button {
-		color: white !important;
-	}
-	
-	.active {
-		text-decoration: underline;
-		text-underline-offset: 0.5rem; 
-
-	}
-}
-.sidebar  {
-	background-color: var(--secondary-color);
-}
-
-.hamburger{
-	width: 25px;
-	height: 25px;
-	position: relative;
-	margin: 5px auto;
-	
-	-webkit-transform: rotate(0deg);
-	-moz-transform: rotate(0deg);
-	-o-transform: rotate(0deg);
-	transform: rotate(0deg);
-	-webkit-transition: .5s ease-in-out;
-	-moz-transition: .5s ease-in-out;
-	-o-transition: .5s ease-in-out;
-	transition: .5s ease-in-out;
-	cursor: pointer;
+  a {
+    text-decoration: unset;
+    color: white;
   }
-  
+
+  a:hover p {
+    color: var(--primary-color);
+  }
+
+  & button {
+    color: white !important;
+  }
+
+  .active {
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+  }
+}
+
+.sidebar {
+  background-color: var(--secondary-color);
+}
+
+.hamburger {
+  width: 25px;
+  height: 25px;
+  position: relative;
+  margin: 5px auto;
+
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
 .hamburger span {
-	display: block;
-	position: absolute;
-	height: 2px;
-	width: 100%;
-	background: #ffffff;
-	border-radius: 9px;
-	opacity: 1;
-	right: 0;
-	-webkit-transform: rotate(0deg);
-	-moz-transform: rotate(0deg);
-	-o-transform: rotate(0deg);
-	transform: rotate(0deg);
-	-webkit-transition: .25s ease-in-out;
-	-moz-transition: .25s ease-in-out;
-	-o-transition: .25s ease-in-out;
-	transition: .25s ease-in-out;
-  }
-  
-
+  display: block;
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background: #ffffff;
+  border-radius: 9px;
+  opacity: 1;
+  right: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
 
 .hamburger span:nth-child(1) {
-	top: 2px;
-	width: 75%;
+  top: 2px;
+  width: 75%;
 }
 
 .hamburger span:nth-child(2),
 .hamburger span:nth-child(3) {
-	top: 10px;
-	
+  top: 10px;
 }
 
 .hamburger span:nth-child(4) {
-	top: 18px;
-	width: 75%;
+  top: 18px;
+  width: 75%;
 }
 
 .hamburger.open span:nth-child(1) {
-	top: 18px;
-	width: 0%;
-	left: 50%;
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
 
 .hamburger.open span:nth-child(2) {
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-o-transform: rotate(45deg);
-	transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .hamburger.open span:nth-child(3) {
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
-	transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .hamburger.open span:nth-child(4) {
-	top: 18px;
-	width: 0%;
-	left: 50%;
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
 
-
 .avatar {
-	&:hover {
-		cursor: pointer;
-		box-shadow: 0 0  10px  rgba(var(--primary-color-rgb), $alpha: 1);
-		border-radius:50%;
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(var(--primary-color-rgb), $alpha: 1);
+    border-radius: 50%;
+  }
 
-
-	}
-	&:focus {
-		box-shadow: 0 0  15px  rgba(var(--primary-color-rgb), $alpha: 1);
-	}
+  &:focus {
+    box-shadow: 0 0 15px rgba(var(--primary-color-rgb), $alpha: 1);
+  }
 }
