--- a/src/components/public/shared/CTASection/CTASection.module.scss
+++ b/src/components/public/shared/CTASection/CTASection.module.scss
@@ -1,21 +1,14 @@
 .cta-container {
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	padding: 2rem 0;
-	width: 100%;
-	background: rgba(var(--secondary-color-rgb), 1);
-	color: white;
-	background-image: url('/images/common/elephant.svg');
-	background-size: 45%;
-	background-repeat: no-repeat;
-	background-position: bottom right;
-	line-height: 1.25;
+  background: rgba(var(--secondary-color-rgb), 1);
+  background-image: url("/images/common/elephant.svg");
+  background-size: 45%;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  line-height: 1.25;
 }
 
 @media screen and (min-width: 768px) {
-	.cta-container {
-		padding: 5rem;
-		background-position: right;
-	}
+  .cta-container {
+    background-position: right;
+  }
 }
