--- a/src/components/public/contact/Contact.module.scss
+++ b/src/components/public/contact/Contact.module.scss
@@ -1,65 +1,55 @@
 .section-container {
-   display: flex;
-   justify-content: center;
-	margin: 2rem 0;
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
 }
 
 @media screen and (min-width: 768px) {
-	.section-container {
-     
-		margin: 6rem 0;
-	}
-    
+  .section-container {
+    margin: 6rem 0;
+  }
 }
 
 .button {
-    justify-content: center;
-    font-size: 20px;
-    font-family: var(--font-family);
-    font-weight: 600;
-    line-height: 30px;
-    word-wrap: break-word;
-    background-color: var(--primary-color);
-    border-radius: 5px; 
-    color: var(--secondary-color);
-    &:hover {
-        background-color: var(--secondary-color);
+  justify-content: center;
+  font-size: 20px;
+  font-family: var(--font-family);
+  font-weight: 600;
+  line-height: 30px;
+  word-wrap: break-word;
+  background-color: var(--primary-color);
+  border-radius: 5px;
+  color: var(--secondary-color);
 
-        color:white
-    }
-
+  &:hover {
+    background-color: var(--secondary-color);
+    color: white;
+  }
 }
-
-
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    // margin-top: 800px;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  // margin-top: 800px;
 }
+
 .content-container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 1200px;
-    margin: 5rem 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
+  margin: 5rem 0;
 }
+
 .content-text {
-    color: var(--secondary-color);
-font-size: 24px;
-font-family: var(--font-family);
-font-weight: 300;
-line-height: 34px;
-word-wrap: break-word;
-
+  color: var(--secondary-color);
+  font-size: 24px;
+  font-family: var(--font-family);
+  font-weight: 300;
+  line-height: 34px;
+  word-wrap: break-word;
 }
-
-@media (min-width: 1200px) {
-   
-}
-
