--- a/src/components/secure/calculator/Result/style.module.scss
+++ b/src/components/secure/calculator/Result/style.module.scss
@@ -1,5 +1,10 @@
+.image {
+  height: 300px;
+}
+
 .quiz {
-  width: 350px;
+  width: 400px;
+  height: 300px;
 
   @media screen and (max-width: 991px) {
     width: 100%;
