--- a/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/styles.module.scss
+++ b/src/components/secure/calculator/AllOnX/PdfExport/InputSummary/styles.module.scss
@@ -2,9 +2,10 @@
   width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 
-  th, td {
+  th,
+  td {
     padding: 8px;
     text-align: center;
     font-size: 12px;
@@ -17,6 +18,7 @@
     color: var(--surface-0);
     word-wrap: normal;
   }
+
   tr {
     &.even {
       background-color: var(--gray-50);
