update home page image

--- a/src/components/public/shared/HeroSection/HeroSection.module.scss
+++ b/src/components/public/shared/HeroSection/HeroSection.module.scss
@@ -1,12 +1,16 @@
 .hero-container {
   padding: 5rem 0;
   box-sizing: border-box;
-  height: 100%;
+  height: 660px;
   background-color: var(--secondary-color);
   display: flex;
   justify-content: center;
   background: radial-gradient(circle, #31574d, #023932 300px);
   z-index: 1;
+
+  @media screen and (max-width: 768px) {
+    height: initial;
+  }
 }
 
 .hero-wrapper {
